small cherry pick fix